build: Update modules